# t-vision

./: .gitignore  CMakeLists.txt  main.cpp
include/: main.hpp  my-utils.hpp  render-pipe.hpp
lib/: CMakeLists.txt  my-utils.cpp  programs.cpp  render-pipe.cpp
resources/: setup_resources.sh
shaders/: change_detection.frag  change_detection_from_black.frag  fragment.glsl  vertex.glsl
